--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,41 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/22090057_muhammadDaffa
 excludes=
+file.reference.barcode.jar=C:\\Users\\ThinkPad X1 Carbon\\Downloads\\LIBRARY\\barcode.jar
+file.reference.beansbinding-1.2.1.jar=D:\\LIBRARY IREPORT\\beansbinding-1.2.1.jar
+file.reference.commons-beanutils-1.8.2.jar=D:\\LIBRARY IREPORT\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=D:\\LIBRARY IREPORT\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=D:\\LIBRARY IREPORT\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=D:\\LIBRARY IREPORT\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=D:\\LIBRARY IREPORT\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=D:\\LIBRARY IREPORT\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=D:\\LIBRARY IREPORT\\iText-2.1.7.js2.jar
+file.reference.itextpdf-5.0.6.jar=D:\\LIBRARY IREPORT\\itextpdf-5.0.6.jar
+file.reference.jasperreports-5.6.0.jar=D:\\LIBRARY IREPORT\\jasperreports-5.6.0.jar
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\ThinkPad X1 Carbon\\Downloads\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=D:\\LIBRARY IREPORT\\mysql-connector-java-5.1.23-bin.jar
+file.reference.qrgen-1.0.jar=C:\\Users\\ThinkPad X1 Carbon\\Downloads\\LIBRARY\\qrgen-1.0.jar
+file.reference.zxing-core-1.7.jar=C:\\Users\\ThinkPad X1 Carbon\\Downloads\\LIBRARY\\zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar=C:\\Users\\ThinkPad X1 Carbon\\Downloads\\LIBRARY\\zxing-j2se-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.beansbinding-1.2.1.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.itextpdf-5.0.6.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.barcode.jar}:\
+    ${file.reference.qrgen-1.0.jar}:\
+    ${file.reference.zxing-core-1.7.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
